samples/_failures_safe/1761535246_e83d98_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d2161d19.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void print
      | ^~~~
